# Deep-Learning-Julia

./: README.md  SpaceAcademyManual.jsx  Untitled1.ipynb  Untitled2.ipynb  app.py  hello.py  pyproject.toml  requirements.txt  sequencial_train.ipynb  sequential_reward_shaping.ipynb  space_invaders_demo.html
Lab/: train.ipynb
logs/logs_1/: training_log.txt
logs/logs_2/: training_log_2.txt
logs/logs_3/: training_log_3.txt
