[project]
name = "deep-learning-julia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'ale-py==0.10.1',
    'gymnasium==1.0.0',
    'ipykernel==6.29.5',
    'keras==3.7.0',
    'tensorflow==2.18.0',
    'gymnasium[atari,other]==1.0.0',
]
